# stt-simple

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DESIGN.md  LICENSE  Makefile  README.md  RELEASES.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
KotoType/: Info.plist  Package.swift
KotoType/Tests/: AccessibilityDiagnosticsTests.swift  AppRelauncherTests.swift  AppSettingsTests.swift  BatchTranscriptionManagerTests.swift  HotkeyConfigurationTests.swift  HotkeyRecorderTests.swift  ImportedAudioTranscriptionManagerTests.swift  InitialSetupDiagnosticsServiceTests.swift  InitialSetupStateManagerTests.swift  InitialSetupWindowControllerLayoutTests.swift  IntegrationTests.swift  KeystrokeSimulatorTests.swift  LoggerTests.swift  MultiProcessManagerTests.swift  PermissionCheckerTests.swift  PythonProcessManagerTests.swift  RealtimeRecorderTests.swift  SettingsManagerTests.swift  TranscriptionHistoryManagerTests.swift  UserDictionaryManagerTests.swift
KotoType/scripts/: create_app.sh  create_dmg.sh  version.sh
STTApp/: Info.plist  Package.swift
STTApp/Tests/: AppSettingsTests.swift  ImportedAudioTranscriptionManagerTests.swift  SettingsManagerTests.swift
STTApp/scripts/: create_app.sh  create_dmg.sh
docs/: SEO_TODO.md  index.html  robots.txt  sitemap.xml
docs/testing/: test-ledger.md
python/: whisper_server.py
scripts/: capture_runtime_artifacts.sh  test_screen_ocr.swift
(+53 files in other folders)
